fix z-index

--- a/src/css/components/about-block.css
+++ b/src/css/components/about-block.css
@@ -64,7 +64,7 @@
     right: 0;
     width: 70%;
     border-radius: 24px;
-    z-index: -1;
+    z-index: -7;
 }
 
 @media screen and (min-width: 768px) {
